# bitcraft-product-gradient

./: .gitignore  README.md  config.ini  pyproject.toml
app/: main.py
outputs/: placeholder.txt
