[project]
name = "app"
version = "0.1.0"
description = "Display market price gradient of a given product in BitCraft Online."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
